--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
-name: Manual Nuitka Build And Release
+name: Manual Nuitka Release
 
 on:
   workflow_dispatch:
     inputs:
       tag:
-        description: "Release tag (example: v1.2.0)"
+        description: "Release tag, e.g. v1.2.0"
         required: true
         type: string
       release_name:
-        description: "Release title (optional)"
+        description: "Release name (optional)"
         required: false
         default: ""
         type: string
@@ -24,15 +24,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - runner: windows-latest
-            arch: x64
-            label: x64
-          - runner: windows-latest
-            arch: x64
-            label: x86_64
-          - runner: windows-11-arm
-            arch: arm64
-            label: arm64
+          - label: x64
+            runner: windows-latest
+            py_arch: x64
+          - label: x86_64
+            runner: windows-latest
+            py_arch: x64
+          - label: arm64
+            runner: windows-11-arm
+            py_arch: arm64
 
     steps:
       - name: Checkout
@@ -42,25 +42,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          architecture: ${{ matrix.arch }}
+          architecture: ${{ matrix.py_arch }}
 
-      - name: Install Nuitka toolchain
+      - name: Install dependencies
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          pip install nuitka ordered-set zstandard pyside6 pillow
+          pip install nuitka ordered-set zstandard pyside6
 
-      - name: Convert icon.png to icon.ico
+      - name: Validate icon
         shell: pwsh
         run: |
-          if (-not (Test-Path "icon.png")) { throw "icon.png not found in repository root." }
-          python - <<'PY'
-          from PIL import Image
-          img = Image.open("icon.png").convert("RGBA")
-          img.save("icon.ico", format="ICO", sizes=[(16,16),(24,24),(32,32),(48,48),(64,64),(128,128),(256,256)])
-          PY
+          if (-not (Test-Path "icon.ico")) {
+            throw "icon.ico not found in repository root."
+          }
 
-      - name: Build executable with Nuitka
+      - name: Build with Nuitka
         shell: pwsh
         run: |
           python -m nuitka main.py `
@@ -73,9 +70,10 @@ jobs:
             --include-data-dir=view=view `
             --include-data-file=about.html=about.html `
             --include-data-file=icon.png=icon.png `
+            --include-data-file=icon.ico=icon.ico `
             --output-dir=build
 
-      - name: Bundle full project snapshot
+      - name: Include full project snapshot
         shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path "build\main.dist\project" | Out-Null
@@ -85,8 +83,8 @@ jobs:
       - name: Pack artifact
         shell: pwsh
         run: |
-          $zipName = "HomeworkIsland-windows-${{ matrix.label }}.zip"
-          Compress-Archive -Path "build\main.dist\*" -DestinationPath "$zipName" -Force
+          $name = "HomeworkIsland-windows-${{ matrix.label }}.zip"
+          Compress-Archive -Path "build\main.dist\*" -DestinationPath $name -Force
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -101,15 +99,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - runner: ubuntu-latest
+          - label: amd64
             deb_arch: amd64
-            label: amd64
-          - runner: ubuntu-latest
+            runner: ubuntu-latest
+          - label: x86_64
             deb_arch: amd64
-            label: x86_64
-          - runner: ubuntu-24.04-arm
+            runner: ubuntu-latest
+          - label: arm64
             deb_arch: arm64
-            label: arm64
+            runner: ubuntu-24.04-arm
 
     steps:
       - name: Checkout
@@ -120,7 +118,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Nuitka toolchain
+      - name: Install dependencies
         shell: bash
         run: |
           set -euxo pipefail
@@ -129,7 +127,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y patchelf
 
-      - name: Build Linux binary with Nuitka
+      - name: Build with Nuitka
         shell: bash
         run: |
           set -euxo pipefail
@@ -141,9 +139,10 @@ jobs:
             --include-data-dir=view=view \
             --include-data-file=about.html=about.html \
             --include-data-file=icon.png=icon.png \
+            --include-data-file=icon.ico=icon.ico \
             --output-dir=build
 
-      - name: Build deb package
+      - name: Build .deb
         shell: bash
         run: |
           set -euxo pipefail
@@ -190,12 +189,12 @@ jobs:
           Priority: optional
           Architecture: ${{ matrix.deb_arch }}
           Maintainer: HomeworkIsland Builder <builder@example.com>
-          Description: Homework board app built with Nuitka (Qt/QML)
+          Description: Homework board app built by Nuitka.
            Includes compiled runtime and full project snapshot.
           EOF
 
-          DEB_NAME="${APP_NAME}_${APP_VER}_${{ matrix.label }}.deb"
-          dpkg-deb --build "$PKG_ROOT" "$DEB_NAME"
+          OUT="${APP_NAME}_${APP_VER}_${{ matrix.label }}.deb"
+          dpkg-deb --build "$PKG_ROOT" "$OUT"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -211,12 +210,12 @@ jobs:
       - build-deb
 
     steps:
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: release-assets
 
-      - name: Flatten assets
+      - name: Flatten files
         shell: bash
         run: |
           set -euxo pipefail
@@ -224,10 +223,20 @@ jobs:
           find release-assets -type f -exec cp {} release-flat/ \;
           ls -lah release-flat
 
-      - name: Publish release
+      - name: Resolve release name
+        id: meta
+        shell: bash
+        run: |
+          if [ -n "${{ github.event.inputs.release_name }}" ]; then
+            echo "name=${{ github.event.inputs.release_name }}" >> "$GITHUB_OUTPUT"
+          else
+            echo "name=${{ github.event.inputs.tag }}" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Create/Update GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event.inputs.tag }}
-          name: ${{ github.event.inputs.release_name != '' && github.event.inputs.release_name || github.event.inputs.tag }}
+          name: ${{ steps.meta.outputs.name }}
           generate_release_notes: true
           files: release-flat/*
