--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Manual Nuitka Release
+name: Manual Nuitka Windows Release
 
 on:
   workflow_dispatch:
@@ -17,22 +17,21 @@ permissions:
   contents: write
 
 jobs:
-  build-windows:
-    name: Windows (${{ matrix.label }})
+  build-exe:
+    name: Build EXE (${{ matrix.arch_label }})
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - label: x64
+          - arch_label: x64
             runner: windows-latest
-            py_arch: x64
-          - label: x86_64
-            runner: windows-latest
-            py_arch: x64
-          - label: arm64
+            python_arch: x64
+            alias_label: x86_64
+          - arch_label: arm64
             runner: windows-11-arm
-            py_arch: arm64
+            python_arch: arm64
+            alias_label: ""
 
     steps:
       - name: Checkout
@@ -42,7 +41,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          architecture: ${{ matrix.py_arch }}
+          architecture: ${{ matrix.python_arch }}
 
       - name: Install dependencies
         shell: pwsh
@@ -57,11 +56,11 @@ jobs:
             throw "icon.ico not found in repository root."
           }
 
-      - name: Build with Nuitka
+      - name: Build onefile exe with Nuitka
         shell: pwsh
         run: |
           python -m nuitka main.py `
-            --standalone `
+            --onefile `
             --assume-yes-for-downloads `
             --enable-plugin=pyside6 `
             --windows-console-mode=disable `
@@ -70,158 +69,58 @@ jobs:
             --include-data-dir=view=view `
             --include-data-file=about.html=about.html `
             --include-data-file=icon.ico=icon.ico `
-            --exclude=icon.png `
             --output-dir=build
 
-      - name: Include full project snapshot
+      - name: Prepare package content (include current directory, exclude icon.png)
         shell: pwsh
         run: |
-          New-Item -ItemType Directory -Force -Path "build\main.dist\project" | Out-Null
-          robocopy . "build\main.dist\project" /E /XD .git .github .venv build dist __pycache__ /XF *.pyc icon.png
+          $ErrorActionPreference = "Stop"
+          if (-not (Test-Path "build\main.exe")) {
+            throw "Nuitka output not found: build/main.exe"
+          }
+
+          New-Item -ItemType Directory -Force -Path "release\project" | Out-Null
+          robocopy . "release\project" /E /XD .git .venv build dist release __pycache__ /XF icon.png *.pyc
           if ($LASTEXITCODE -gt 7) { exit $LASTEXITCODE }
 
-      - name: Pack artifact
-        shell: pwsh
-        run: |
-          $name = "HomeworkIsland-windows-${{ matrix.label }}.zip"
-          Compress-Archive -Path "build\main.dist\*" -DestinationPath $name -Force
+          Copy-Item "build\main.exe" "release\HomeworkIsland-${{ matrix.arch_label }}.exe" -Force
+          Compress-Archive -Path "release\HomeworkIsland-${{ matrix.arch_label }}.exe","release\project\*" `
+            -DestinationPath "HomeworkIsland-windows-${{ matrix.arch_label }}.zip" -Force
 
-      - name: Upload artifact
+          if ("${{ matrix.alias_label }}" -ne "") {
+            Copy-Item "release\HomeworkIsland-${{ matrix.arch_label }}.exe" "HomeworkIsland-${{ matrix.alias_label }}.exe" -Force
+            Compress-Archive -Path "release\HomeworkIsland-${{ matrix.arch_label }}.exe","release\project\*" `
+              -DestinationPath "HomeworkIsland-windows-${{ matrix.alias_label }}.zip" -Force
+          }
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-${{ matrix.label }}
-          path: HomeworkIsland-windows-${{ matrix.label }}.zip
-
-  build-deb:
-    name: Debian (${{ matrix.label }})
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - label: amd64
-            deb_arch: amd64
-            runner: ubuntu-latest
-          - label: x86_64
-            deb_arch: amd64
-            runner: ubuntu-latest
-          - label: arm64
-            deb_arch: arm64
-            runner: ubuntu-24.04-arm
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        shell: bash
-        run: |
-          set -euxo pipefail
-          python -m pip install --upgrade pip
-          pip install nuitka ordered-set zstandard pyside6
-          sudo apt-get update
-          sudo apt-get install -y patchelf
-
-      - name: Build with Nuitka
-        shell: bash
-        run: |
-          set -euxo pipefail
-          python -m nuitka main.py \
-            --standalone \
-            --assume-yes-for-downloads \
-            --enable-plugin=pyside6 \
-            --include-data-dir=qml=qml \
-            --include-data-dir=view=view \
-            --include-data-file=about.html=about.html \
-            --include-data-file=icon.ico=icon.ico \
-            --exclude=icon.png \
-            --output-dir=build
-
-      - name: Build .deb
-        shell: bash
-        run: |
-          set -euxo pipefail
-          APP_NAME="homework-island"
-          APP_VER="${{ github.event.inputs.tag }}"
-          APP_VER="${APP_VER#v}"
-          PKG_ROOT="$PWD/pkgroot"
-          INSTALL_DIR="$PKG_ROOT/opt/$APP_NAME"
-
-          mkdir -p "$INSTALL_DIR/runtime"
-          cp -r build/main.dist/* "$INSTALL_DIR/runtime/"
-
-          mkdir -p "$INSTALL_DIR/project"
-          rsync -a ./ "$INSTALL_DIR/project/" --exclude .git --exclude .github --exclude .venv --exclude build --exclude dist --exclude __pycache__ --exclude icon.png
-
-          mkdir -p "$PKG_ROOT/usr/bin"
-          cat > "$PKG_ROOT/usr/bin/$APP_NAME" <<'EOF'
-          #!/usr/bin/env bash
-          set -e
-          exec /opt/homework-island/runtime/main.bin
-          EOF
-          chmod +x "$PKG_ROOT/usr/bin/$APP_NAME"
-
-          mkdir -p "$PKG_ROOT/usr/share/applications"
-          cat > "$PKG_ROOT/usr/share/applications/$APP_NAME.desktop" <<EOF
-          [Desktop Entry]
-          Name=HomeworkIsland
-          Comment=Homework board app
-          Exec=/usr/bin/$APP_NAME
-          Icon=$APP_NAME
-          Terminal=false
-          Type=Application
-          Categories=Education;Utility;
-          EOF
-
-          mkdir -p "$PKG_ROOT/usr/share/icons/hicolor/256x256/apps"
-          cp icon.png "$PKG_ROOT/usr/share/icons/hicolor/256x256/apps/$APP_NAME.png"
-
-          mkdir -p "$PKG_ROOT/DEBIAN"
-          cat > "$PKG_ROOT/DEBIAN/control" <<EOF
-          Package: $APP_NAME
-          Version: $APP_VER
-          Section: utils
-          Priority: optional
-          Architecture: ${{ matrix.deb_arch }}
-          Maintainer: HomeworkIsland Builder <builder@example.com>
-          Description: Homework board app built by Nuitka.
-           Includes compiled runtime and full project snapshot.
-          EOF
-
-          OUT="${APP_NAME}_${APP_VER}_${{ matrix.label }}.deb"
-          dpkg-deb --build "$PKG_ROOT" "$OUT"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: deb-${{ matrix.label }}
-          path: "*.deb"
+          name: windows-${{ matrix.arch_label }}
+          path: |
+            release/HomeworkIsland-${{ matrix.arch_label }}.exe
+            HomeworkIsland-${{ matrix.alias_label }}.exe
+            HomeworkIsland-windows-${{ matrix.arch_label }}.zip
+            HomeworkIsland-windows-${{ matrix.alias_label }}.zip
 
   release:
     name: Publish Release
     runs-on: ubuntu-latest
-    needs:
-      - build-windows
-      - build-deb
+    needs: build-exe
 
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: release-assets
+          path: artifacts
 
-      - name: Flatten files
+      - name: Flatten assets
         shell: bash
         run: |
           set -euxo pipefail
-          mkdir -p release-flat
-          find release-assets -type f -exec cp {} release-flat/ \;
-          ls -lah release-flat
+          mkdir -p release-files
+          find artifacts -type f -exec cp {} release-files/ \;
+          ls -lah release-files
 
       - name: Resolve release name
         id: meta
@@ -239,4 +138,4 @@ jobs:
           tag_name: ${{ github.event.inputs.tag }}
           name: ${{ steps.meta.outputs.name }}
           generate_release_notes: true
-          files: release-flat/*
+          files: release-files/*
