--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Manual Nuitka Windows Release
+name: Manual PyInstaller Windows Release
 
 on:
   workflow_dispatch:
@@ -47,7 +47,7 @@ jobs:
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          pip install nuitka ordered-set zstandard pyside6
+          pip install pyqt5 pyinstaller
 
       - name: Validate icon
         shell: pwsh
@@ -56,39 +56,34 @@ jobs:
             throw "icon.ico not found in repository root."
           }
 
-      - name: Build onefile exe with Nuitka
+      - name: Build onefile exe with PyInstaller
         shell: pwsh
         run: |
-          python -m nuitka main.py `
-            --onefile `
-            --assume-yes-for-downloads `
-            --enable-plugin=pyside6 `
-            --windows-console-mode=disable `
-            --windows-icon-from-ico=icon.ico `
-            --include-data-dir=qml=qml `
-            --include-data-dir=view=view `
-            --include-data-file=about.html=about.html `
-            --include-data-file=icon.ico=icon.ico `
-            --output-dir=build
+          pyinstaller --noconfirm --clean --onefile --windowed --icon "icon.ico" `
+            --add-data "qml;qml" `
+            --add-data "view;view" `
+            --add-data "about.html;." `
+            --add-data "icon.ico;." `
+            main.py
 
       - name: Prepare package content (include current directory, exclude icon.png)
         shell: pwsh
         run: |
           $ErrorActionPreference = "Stop"
-          if (-not (Test-Path "build\main.exe")) {
-            throw "Nuitka output not found: build/main.exe"
+          if (-not (Test-Path "dist\main.exe")) {
+            throw "PyInstaller output not found: dist/main.exe"
           }
 
           New-Item -ItemType Directory -Force -Path "release\project" | Out-Null
-          robocopy . "release\project" /E /XD .git .venv build dist release __pycache__ /XF icon.png *.pyc
+          robocopy . "release\project" /E /XD .git .github .venv build dist release __pycache__ /XF icon.png *.pyc
           if ($LASTEXITCODE -gt 7) { exit $LASTEXITCODE }
 
-          Copy-Item "build\main.exe" "release\HomeworkIsland-${{ matrix.arch_label }}.exe" -Force
+          Copy-Item "dist\main.exe" "release\HomeworkIsland-${{ matrix.arch_label }}.exe" -Force
           Compress-Archive -Path "release\HomeworkIsland-${{ matrix.arch_label }}.exe","release\project\*" `
             -DestinationPath "HomeworkIsland-windows-${{ matrix.arch_label }}.zip" -Force
 
           if ("${{ matrix.alias_label }}" -ne "") {
-            Copy-Item "release\HomeworkIsland-${{ matrix.arch_label }}.exe" "HomeworkIsland-${{ matrix.alias_label }}.exe" -Force
+            Copy-Item "release\HomeworkIsland-${{ matrix.arch_label }}.exe" "release\HomeworkIsland-${{ matrix.alias_label }}.exe" -Force
             Compress-Archive -Path "release\HomeworkIsland-${{ matrix.arch_label }}.exe","release\project\*" `
               -DestinationPath "HomeworkIsland-windows-${{ matrix.alias_label }}.zip" -Force
           }
@@ -98,10 +93,8 @@ jobs:
         with:
           name: windows-${{ matrix.arch_label }}
           path: |
-            release/HomeworkIsland-${{ matrix.arch_label }}.exe
-            HomeworkIsland-${{ matrix.alias_label }}.exe
-            HomeworkIsland-windows-${{ matrix.arch_label }}.zip
-            HomeworkIsland-windows-${{ matrix.alias_label }}.zip
+            release/*.exe
+            HomeworkIsland-windows-*.zip
 
   release:
     name: Publish Release
