--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,8 @@ jobs:
 
           New-Item -ItemType Directory -Force -Path "release\project" | Out-Null
           robocopy . "release\project" /E /XD build dist release __pycache__ /XF *.pyc
-          if ($LASTEXITCODE -gt 7) { exit $LASTEXITCODE }
+          $rc = $LASTEXITCODE
+          if ($rc -ge 8) { exit $rc }
 
           Copy-Item "dist\main.exe" "release\HomeworkIsland-${{ matrix.arch_label }}.exe" -Force
           Compress-Archive -Path "release\HomeworkIsland-${{ matrix.arch_label }}.exe","release\project\*" `
@@ -132,4 +133,3 @@ jobs:
           name: ${{ steps.meta.outputs.name }}
           generate_release_notes: true
           files: release-files/*
-
